# smart-demand-response-gateway

./: Makefile  README.md
.kiro/specs/nepal-grid-peak-load-controller/: .config.kiro  design.md  requirements.md  tasks.md
app/: Makefile  README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/lib/: main.dart
app/linux/: CMakeLists.txt
app/test/: widget_test.dart
app/web/: index.html  manifest.json
backend/: .air.toml  .gitignore  Makefile  README.md  go.mod
firmware/: .clangd  .gitignore  CMakeLists.txt  Makefile  sdkconfig.defaults
firmware/docs/: FIRMWARE_LOGIC.md  NAMING_CONVENTIONS.md
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main.cpp
firmware/main/core/: config.h  gateway_state.cpp  gateway_state.hpp  nvs_config.cpp  nvs_config.hpp  shared_state.c  shared_state.h
firmware/main/features/network/: network_client.cpp  network_client.hpp  network_task.c  network_task.h  wifi_station.cpp  wifi_station.hpp
firmware/main/features/relay/: relay_control.c  relay_control.h  relay_controller.cpp  relay_controller.hpp
firmware/main/features/sensor/: current_sensor.cpp  current_sensor.hpp  sensor_task.c  sensor_task.h  smoothing.c  smoothing.h
hardware/: .gitignore  Makefile  README.md
hardware/design-files/: ct_sensor.kicad_sch  esp32_module.kicad_sch  fp-lib-table  gateway.kicad_pcb  gateway.kicad_prl  gateway.kicad_pro  gateway.kicad_sch  power_supply.kicad_sch  relay_driver.kicad_sch  sym-lib-table
hardware/documentation/: BOM.csv
makefiles/: app.mk  backend.mk  firmware.mk
(+37 files in other folders)
